--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ wiremock = { version = "^0.5.14" }
 tokio = { version = "^1.20.1" }
 actix-rt = { version = "2.7.0" }
 url = { version = "2.2.2" }
+pretty_assertions = { version = "1.2.1" }
 
 [package.metadata.commands]
 fmt-check = "cargo fmt --all -- --check"
