--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ actix-web = { version = "4.1.0" }
 actix-http = { version = "3.2.1" }
 awc = { version = "3.0.0", features = ["openssl"] }
 # Rocket stuff
-rocket = { version = "^0.5.0-rc.2" }
+rocket = { version = "^0.5.0-rc.2", features = ["json"]  }
 rocket_http = { version = "^0.5.0-rc.2" }
 #hyper = { version = "0.14.20" }
 reqwest = { version = "0.11.11", features = ["json"] }
